@@ -4,13 +4,13 @@
   <groupId>org.cojen</groupId>
   <artifactId>tupl</artifactId>
   <packaging>jar</packaging>
-  <name>Tupl</name>
- <version>1.8.0-panama</version>
+  <name>TuplDB</name>
+  <version>1.9.0-panama</version>
   <description>
-    The Unnamed Persistence Library.
+    TuplDB is a high-performance, concurrent, transactional, scalable, low-level embedded database.
   </description>
 
-  <url>https://github.com/cojen/Tupl</url>
+  <url>https://github.com/cojen/TuplDB</url>
 
   <inceptionYear>2011</inceptionYear>
 
@@ -36,9 +36,9 @@
   </developers>
 
   <scm>
-    <connection>scm:git:https://github.com/cojen/Tupl.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com:cojen/Tupl.git</developerConnection>
-    <url>https://github.com/cojen/Tupl</url>
+    <connection>scm:git:https://github.com/cojen/TuplDB.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com:cojen/TuplDB.git</developerConnection>
+    <url>https://github.com/cojen/TuplDB</url>
   </scm>
 
   <distributionManagement>
@@ -53,7 +53,7 @@
   </distributionManagement>
 
   <issueManagement>
-    <url>https://github.com/cojen/Tupl/issues</url>
+    <url>https://github.com/cojen/TuplDB/issues</url>
     <system>GitHub Issues</system>
   </issueManagement>
 
@@ -72,18 +72,18 @@
     <dependency>
       <groupId>org.cojen</groupId>
       <artifactId>cojen-dirmi</artifactId>
-      <version>[2.3,)</version>
+      <version>[2.4,)</version>
     </dependency>
     <dependency>
       <groupId>org.lz4</groupId>
       <artifactId>lz4-java</artifactId>
-      <version>[1.7,)</version>
+      <version>[1.8,)</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>[1.7,2.0)</version>
+      <version>[1.7,2.0.16)</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -114,7 +114,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.11</version>
+        <version>0.8.12</version>
         <executions>
           <execution>
             <id>default-prepare-agent</id>
@@ -158,13 +158,38 @@
       -->
 
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <id>page-access-transformer</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <executable>java</executable>
+          <arguments>
+            <argument>-cp</argument>
+            <argument>;</argument>
+            <argument>src/test/java/org/cojen/tupl/tools/PageAccessTransformer.java</argument>
+            <argument>src/main/java/org/cojen/tupl/core</argument>
+            <argument>src/main/java/org/cojen/tupl/core</argument>
+            <argument>clean</argument>
+          </arguments>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
           <configuration>
             <source>22</source>
             <target>22</target>
-            <compilerArgs>--enable-preview</compilerArgs>
           </configuration>
       </plugin>
 
@@ -188,7 +213,7 @@
         <configuration>
           <detectJavaApiLink>true</detectJavaApiLink>
           <links>
-            <link>https://docs.oracle.com/en/java/javase/21/docs/api</link>
+            <link>https://docs.oracle.com/en/java/javase/23/docs/api</link>
           </links>
           <author>false</author>
           <nodeprecatedlist>true</nodeprecatedlist>
